# sunfish

./: .gitattributes  .gitignore  CLAUDE.md  Directory.Build.props  Directory.Packages.props  README.md  Sunfish.slnx  commitlint.config.mjs
.config/: dotnet-tools.json
.github/: CODEOWNERS  SECURITY.md  branch-protection-main.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/rulesets/: README.md  main-branch.json
.github/workflows/: ban-pull-request-target.yml  ci.yml  codeql-csharp.yml  codeql-javascript.yml  codeql.yml  dependabot-auto-merge.yml  i18n-coverage.yml  lighthouse-ci.yml  release.yml  sbom.yml  tauri-build.yml  web-ci.yml
.husky/: commit-msg  commit-msg-fleet-preflight.sh  pre-commit
.wolf/: anatomy.md
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: auth.rs  cache.rs  mod.rs  write_queue.rs
apps/desktop/src-tauri/src/sync/: pull.rs  push.rs
apps/web/: RETIRED.md  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
docs/marketing/: pitch-narrative-scaffolding-2026-05-17.md
src/: MauiProgram.cs  README.md  Sunfish.Anchor.csproj
src/Cockpit/: CockpitPermissions.cs
src/Components/: _Imports.razor  (+6 more)
(+293 files in other folders)
