[package]
name = "anchor-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "anchor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
# W#60 P4 PR 1 — OS-keychain backing for Stronghold master key.
#
# keyring v3 ships NO default features and will silently fall back to its
# in-process mock store unless platform backends are explicitly enabled.
# Council A1.1: enable native backends for all targets.
#   - `windows-native`        → Credential Manager (DPAPI)
#   - `apple-native`          → macOS / iOS Keychain
#   - `sync-secret-service`   → Linux Secret Service (libsecret), sync API
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
